--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
+      - ./config.json:/etc/immich/config.json
     env_file:
       - .env
     ports:
@@ -24,6 +25,7 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
+      - ./config.json:/etc/immich/config.json
     env_file:
       - .env
     depends_on:
