style(env): Rename 1Password item name
Capitalize as its own name.

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ IMMICH_VERSION=release
 DB_HOSTNAME=immich_postgres
 DB_DATABASE_NAME=immich
 DB_USERNAME=postgres
-DB_PASSWORD="op://Personal/immich Database Password/credential"
+DB_PASSWORD="op://Personal/Immich Database Password/credential"
 REDIS_HOSTNAME=immich_redis
