--- a/compose.yml
+++ b/compose.yml
@@ -8,14 +8,14 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
-      - ./config.json:/etc/immich/config.json
+      - ./config/immich.json:/config/immich.json
     env_file:
       - .env
-    ports:
-      - 2283:3001
     depends_on:
       - redis
       - database
+      - tailscale
+    network_mode: service:tailscale
     restart: always
 
   immich-microservices:
@@ -25,7 +25,7 @@ services:
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
-      - ./config.json:/etc/immich/config.json
+      - ./config/immich.json:/config/immich.json
     env_file:
       - .env
     depends_on:
@@ -75,6 +75,21 @@ services:
       - ./db_dumps:/db_dumps
     depends_on:
       - database
+    restart: always
+
+  tailscale:
+    container_name: immich_tailscale
+    hostname: immich
+    image: tailscale/tailscale:latest
+    environment:
+      - TS_STATE_DIR=/var/lib/tailscale
+      - TS_SERVE_CONFIG=/config/tailscale.json
+    volumes:
+      - /dev/net/tun:/dev/net/tun
+      - ./config/tailscale.json:/config/tailscale.json
+    cap_add:
+      - net_admin
+      - sys_module
     restart: always
 
 volumes:
