--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ IMMICH_VERSION=release
 DB_HOSTNAME=immich_postgres
 DB_USERNAME=postgres
 DB_PASSWORD="op://Personal/Immich Database Password/credential"
+TS_AUTHKEY=""
 DB_DATABASE_NAME=immich
 REDIS_HOSTNAME=immich_redis
