--- a/compose.yml
+++ b/compose.yml
@@ -5,12 +5,11 @@ services:
     container_name: immich_server
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     command: ["start.sh", "immich"]
-    env_file:
-      - .env
+    env_file: [".env"]
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
-      - ./config/immich.json:/config/immich.json
+      - ./config/immich.json:${IMMICH_CONFIG_FILE}:ro
     depends_on:
       - redis
       - database
@@ -22,12 +21,11 @@ services:
     container_name: immich_microservices
     image: ghcr.io/immich-app/immich-server:${IMMICH_VERSION:-release}
     command: ["start.sh", "microservices"]
-    env_file:
-      - .env
+    env_file: [".env"]
     volumes:
       - ${UPLOAD_LOCATION}:/usr/src/app/upload
       - /etc/localtime:/etc/localtime:ro
-      - ./config/immich.json:/config/immich.json
+      - ./config/immich.json:${IMMICH_CONFIG_FILE}:ro
     depends_on:
       - redis
       - database
@@ -36,8 +34,7 @@ services:
   immich-machine-learning:
     container_name: immich_machine_learning
     image: ghcr.io/immich-app/immich-machine-learning:${IMMICH_VERSION:-release}
-    env_file:
-      - .env
+    env_file: [".env"]
     volumes:
       - model-cache:/cache
     restart: always
@@ -51,8 +48,8 @@ services:
     container_name: immich_postgres
     image: registry.hub.docker.com/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
     environment:
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE_NAME}
     volumes:
       - pgdata:/var/lib/postgresql/data
@@ -61,8 +58,7 @@ services:
   backup:
     container_name: immich_db_dumper
     image: prodrigestivill/postgres-backup-local:14
-    env_file:
-      - .env
+    env_file: [".env"]
     environment:
       POSTGRES_HOST: database
       POSTGRES_CLUSTER: "TRUE"
@@ -81,15 +77,14 @@ services:
     container_name: immich_tailscale
     hostname: immich
     image: tailscale/tailscale:latest
-    env_file:
-      - .env
+    env_file: [".env"]
     environment:
       TS_STATE_DIR: /var/lib/tailscale
       TS_SERVE_CONFIG: /config/tailscale.json
     volumes:
       - ./tailscale-state:/var/lib/tailscale
       - /dev/net/tun:/dev/net/tun
-      - ./config/tailscale.json:/config/tailscale.json
+      - ./config/tailscale.json:/config/tailscale.json:ro
     cap_add:
       - net_admin
       - sys_module
