--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ name: immich
 services:
   immich-server:
     container_name: immich_server
-    image: ghcr.io/immich-app/immich-server:release
+    image: ghcr.io/immich-app/immich-server:v1.101.0@sha256:c1dbaec9766ba7a380833af2717c911a1490849e93060575414fb7f67378a03a
     command: ["start.sh", "immich"]
     env_file: [".env"]
     volumes:
@@ -19,7 +19,7 @@ services:
 
   immich-microservices:
     container_name: immich_microservices
-    image: ghcr.io/immich-app/immich-server:release
+    image: ghcr.io/immich-app/immich-server:v1.101.0@sha256:c1dbaec9766ba7a380833af2717c911a1490849e93060575414fb7f67378a03a
     command: ["start.sh", "microservices"]
     env_file: [".env"]
     volumes:
@@ -33,7 +33,7 @@ services:
 
   immich-machine-learning:
     container_name: immich_machine_learning
-    image: ghcr.io/immich-app/immich-machine-learning:release
+    image: ghcr.io/immich-app/immich-machine-learning:v1.101.0@sha256:067b76281cf7cb894e1a380aa0d388c6a04e0b192cdbaad3c5f82bdf71ff7821
     env_file: [".env"]
     volumes:
       - model-cache:/cache
@@ -41,12 +41,12 @@ services:
 
   redis:
     container_name: immich_redis
-    image: redis:latest
+    image: redis:7.2.4@sha256:d6ecc832969a4827645a083da38345327b3447772fe907e7d4311c79b4e3a06e
     restart: always
 
   database:
     container_name: immich_postgres
-    image: tensorchord/pgvecto-rs:pg16-v0.2.1
+    image: tensorchord/pgvecto-rs:pg16-v0.2.1@sha256:ff2288833f32aa863ba46f4c6f5b5c143f526a2d27f4cca913c232f917a66602
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -57,7 +57,7 @@ services:
 
   backup:
     container_name: immich_db_dumper
-    image: prodrigestivill/postgres-backup-local:latest
+    image: prodrigestivill/postgres-backup-local:16@sha256:c577b0d62673d4dce0471c75d21e3e08e4e9789903f5a3fd6613c410442e9670
     env_file: [".env"]
     environment:
       POSTGRES_HOST: database
@@ -76,7 +76,7 @@ services:
   tailscale:
     container_name: immich_tailscale
     hostname: immich
-    image: tailscale/tailscale:latest
+    image: tailscale/tailscale:v1.62.1@sha256:3b310f980cd9ff0e334e48c53eb95b21d77b72a596854c4369fd028f83b41b10
     env_file: [".env"]
     environment:
       TS_STATE_DIR: /var/lib/tailscale
