--- a/compose.yml
+++ b/compose.yml
@@ -41,7 +41,7 @@ services:
 
   redis:
     container_name: immich_redis
-    image: redis:7.2.4-alpine@sha256:7635b0bfdd7dd8552b4b31d6541fef07b734614045b45a52fd5cc27c9dada9e2
+    image: redis:7.2.4-alpine3.19@sha256:a40e29800d387e3cf9431902e1e7a362e4d819233d68ae39380532c3310091ac
     restart: always
 
   database:
