docs(readme): Add contents to introduce this repo
By this instruction, it's easy to deploy Immich.

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ UPLOAD_LOCATION=./library
 IMMICH_CONFIG_FILE=/config/immich.json
 DB_HOSTNAME=immich_postgres
 DB_USERNAME=postgres
-DB_PASSWORD="op://Personal/Immich Database Password/credential"
+DB_PASSWORD=""
 DB_DATABASE_NAME=immich
 TS_AUTHKEY=""
