--- a/homepage/config/homepage/settings.yml
+++ b/homepage/config/homepage/settings.yml
@@ -2,6 +2,11 @@ headerStyle: boxedWidgets
 iconStyle: theme
 
 layout:
+  Speedtest Tracker:
+    tab: Dashboard
+    icon: mdi-speedometer
+    style: row
+    columns: 2
   Media:
     tab: Dashboard
     icon: mdi-multimedia
