--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -22,7 +22,7 @@ services:
 
   database:
     container_name: speedtest_tracker_postgres
-    image: postgres:16.4@sha256:46aa2ee5d664b275f05d1a963b30fff60fb422b4b594d509765c42db46d48881
+    image: postgres:16.3@sha256:sha256:46aa2ee5d664b275f05d1a963b30fff60fb422b4b594d509765c42db46d48881
     environment:
       POSTGRES_HOST: ${DB_HOSTNAME}
       POSTGRES_DB: ${DB_DATABASE_NAME}
