--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -14,8 +14,6 @@ services:
       - /Volumes/Macintosh HD:/mnt/Macintosh HD:ro
     depends_on:
       - glances
-      - tailscale
-    network_mode: service:tailscale
     restart: always
 
   glances:
@@ -29,22 +27,10 @@ services:
       - /etc/os-release:/etc/os-release:ro
     restart: always
 
-  tailscale:
-    container_name: homepage_tailscale
-    hostname: homepage
-    image: tailscale/tailscale:v1.68.1@sha256:a0d1a9ed2abfacf905c0e3423aea00181064162e548f875f422a03924b9cc5c4
-    env_file: [".env"]
+  cloudflare-tunnel:
+    container_name: homepage_cloudflare_tunnel
+    image: cloudflare/cloudflared:2024.6.1@sha256:b809ea110a98112b0ed98b7d976e373c70321541f1a8f592e7932dd63cbf6c5a
+    command: tunnel --no-autoupdate run
     environment:
-      TS_STATE_DIR: /var/lib/tailscale
-      TS_SERVE_CONFIG: /config/tailscale.json
-    volumes:
-      - tailscale:/var/lib/tailscale
-      - /dev/net/tun:/dev/net/tun
-      - ./config/tailscale.json:/config/tailscale.json:ro
-    cap_add:
-      - net_admin
-      - sys_module
+      TUNNEL_TOKEN: ${TUNNEL_TOKEN}
     restart: always
-
-volumes:
-  tailscale:
