chore(homepage): Remove unused widgets
Info from other services are not useful at this time.

--- a/homepage/config/homepage/services.yml
+++ b/homepage/config/homepage/services.yml
@@ -1,27 +1,4 @@
-- Speedtest:
-    - Speedtest Tracker:
-        icon: speedtest-tracker
-        href: "{{HOMEPAGE_VAR_SPEEDTEST_TRACKER_HOST}}"
-        description: Self-hosted internet performance tracking application
-        ping: "{{HOMEPAGE_VAR_SPEEDTEST_TRACKER_HOST}}"
-        container: speedtest-tracker
-        widget:
-          type: speedtest
-          url: "{{HOMEPAGE_VAR_SPEEDTEST_TRACKER_HOST}}"
-
-- Media:
-    - Immich:
-        icon: immich
-        href: "{{HOMEPAGE_VAR_IMMICH_HOST}}"
-        description: Self-hosted photo and video management solution
-        ping: "{{HOMEPAGE_VAR_IMMICH_HOST}}"
-        container: immich
-        widget:
-          type: immich
-          url: "{{HOMEPAGE_VAR_IMMICH_HOST}}"
-          key: "{{HOMEPAGE_VAR_IMMICH_API_KEY}}"
-
-- Souma's MacBook Pro:
+- Machine:
     - System Info:
         widget:
           type: glances
