--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -5,15 +5,15 @@ services:
     container_name: speedtest_tracker
     image: linuxserver/speedtest-tracker:0.20.7@sha256:0a00b9a86ae9a70d90d9bb3174ff08a15e49fdc9c51c3070635e7245a565c269
     environment:
-      APP_KEY: ${APP_KEY}
+      APP_KEY: $APP_KEY
       DB_CONNECTION: pgsql
-      DB_HOST: ${DB_HOSTNAME}
-      DB_DATABASE: ${DB_DATABASE_NAME}
-      DB_USERNAME: ${DB_USERNAME}
-      DB_PASSWORD: ${DB_PASSWORD}
-      SPEEDTEST_SCHEDULE: "0 * * * *"
-      SPEEDTEST_SERVERS: ${SPEEDTEST_SERVERS}
-      DISPLAY_TIMEZONE: "JST"
+      DB_HOST: $DB_HOSTNAME
+      DB_DATABASE: $DB_DATABASE_NAME
+      DB_USERNAME: $DB_USERNAME
+      DB_PASSWORD: $DB_PASSWORD
+      SPEEDTEST_SCHEDULE: 0 * * * *
+      SPEEDTEST_SERVERS: $SPEEDTEST_SERVERS
+      DISPLAY_TIMEZONE: JST
     depends_on:
       database:
         condition: service_healthy
@@ -25,27 +25,27 @@ services:
     container_name: speedtest_tracker_database
     image: postgres:16.3@sha256:0aafd2ae7e6c391f39fb6b7621632d79f54068faebc726caf469e87bd1d301c0
     environment:
-      POSTGRES_HOST: ${DB_HOSTNAME}
-      POSTGRES_DB: ${DB_DATABASE_NAME}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_HOST: $DB_HOSTNAME
+      POSTGRES_DB: $DB_DATABASE_NAME
+      POSTGRES_USER: $DB_USERNAME
+      POSTGRES_PASSWORD: $DB_PASSWORD
     volumes:
       - database:/var/lib/postgresql/data
     healthcheck:
-      test: pg_isready --dbname='${DB_DATABASE_NAME}' --username='${DB_USERNAME}' || exit 1
+      test: pg_isready --dbname='$DB_DATABASE_NAME' --username='$DB_USERNAME' || exit 1
     restart: always
 
   backup:
     container_name: speedtest_tracker_backup
     image: prodrigestivill/postgres-backup-local:16@sha256:f873bbfb406db633ab879628b11ef8092279639c467a2ea5f5bfa08b776252fb
     environment:
-      POSTGRES_HOST: ${DB_HOSTNAME}
-      POSTGRES_DB: ${DB_DATABASE_NAME}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_CLUSTER: "TRUE"
+      POSTGRES_HOST: $DB_HOSTNAME
+      POSTGRES_DB: $DB_DATABASE_NAME
+      POSTGRES_USER: $DB_USERNAME
+      POSTGRES_PASSWORD: $DB_PASSWORD
+      POSTGRES_CLUSTER: TRUE
       SCHEDULE: "@daily"
-      POSTGRES_EXTRA_OPTS: "--clean --if-exists"
+      POSTGRES_EXTRA_OPTS: --clean --if-exists
       BACKUP_DIR: /backup
     volumes:
       - ./backup:/backup
@@ -61,7 +61,7 @@ services:
     image: cloudflare/cloudflared:2024.6.1@sha256:b809ea110a98112b0ed98b7d976e373c70321541f1a8f592e7932dd63cbf6c5a
     command: tunnel --no-autoupdate run
     environment:
-      TUNNEL_TOKEN: ${TUNNEL_TOKEN}
+      TUNNEL_TOKEN: $TUNNEL_TOKEN
     restart: always
 
 volumes:
