--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -3,7 +3,7 @@ name: misskey
 services:
   web:
     container_name: misskey_web
-    image: misskey/misskey:2024.7.0-beta.8@sha256:aea7648dfa95c4853fd713ad8d011ababd1e031fde193d1cec16bb2b7a558bae
+    image: misskey/misskey:2024.7.0@sha256:aac354dd13680c62902f318f4049a824968ba665e83aaad477ddae1ec3bae912
     environment:
       MISSKEY_URL: $MISSKEY_URL
       DATABASE_DB: $DB_DATABASE_NAME
