--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -25,7 +25,7 @@ services:
     restart: always
 
   machine-learning:
-    container_name: immich_machine_learning
+    container_name: immich_machine-learning
     image: ghcr.io/immich-app/immich-machine-learning:v1.111.0@sha256:e9a7b0867331a44b3bfa9be1b198c58fc7c29bee9de1fce51e5692061acef135
     volumes:
       - model-cache:/cache
