--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -32,7 +32,7 @@ services:
     volumes:
       - database:/var/lib/postgresql/data
     healthcheck:
-      test: pg_isready --dbname='$DB_DATABASE_NAME' --username='$DB_USERNAME' || exit 1
+      test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
     restart: always
 
   backup:
