--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -41,8 +41,11 @@ services:
       POSTGRES_PASSWORD: $DB_PASSWORD
     volumes:
       - database:/var/lib/postgresql/data
+      - backup:/tmp/backup
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
+    labels:
+      docker-volume-backup.archive-pre: pg_dumpall -l '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/immich.sql -c --if-exists
     restart: always
 
   redis:
@@ -52,24 +55,43 @@ services:
       test: redis-cli ping || exit 1
     restart: always
 
-  backup:
-    container_name: immich_backup
-    image: prodrigestivill/postgres-backup-local:16@sha256:f873bbfb406db633ab879628b11ef8092279639c467a2ea5f5bfa08b776252fb
+  backup-database: &backup
+    container_name: immich_backup-database
+    image: offen/docker-volume-backup:v2.40.0@sha256:f9cf83d63a1a9129b7c421090b584f11732fc201283f415552b14113f2cbf674
     environment:
-      POSTGRES_HOST: $DB_HOSTNAME
-      POSTGRES_DB: $DB_DATABASE_NAME
-      POSTGRES_USER: $DB_USERNAME
-      POSTGRES_PASSWORD: $DB_PASSWORD
-      POSTGRES_CLUSTER: TRUE
-      POSTGRES_EXTRA_OPTS: --clean --if-exists
-      TZ: JST
-      SCHEDULE: 0 5 * * *
+      BACKUP_CRON_EXPRESSION: "0 5 * * *"
+      BACKUP_FILENAME: immich_database_%Y%m%d.{{ .Extension }}
+      BACKUP_SKIP_BACKENDS_FROM_PRUNE: s3
+      AWS_S3_BUCKET_NAME: $R2_BUCKET_NAME
+      AWS_S3_PATH: $R2_PATH
+      BACKUP_RETENTION_DAYS: 7
+    env_file:
+      - path: ../.env
+        required: true
     volumes:
-      - ./backups:/backups
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - backup:/backup:ro
+      - $BACKUP_DIR/database:/archive
+    configs:
+      - source: timezone
+        target: /etc/localtime
     depends_on:
       database:
         condition: service_healthy
     restart: always
+
+  backup-library:
+    <<: *backup
+    container_name: immich_backup-library
+    environment:
+      BACKUP_CRON_EXPRESSION: "0 5 * * *"
+      BACKUP_FILENAME: immich_library_%Y%m%d.{{ .Extension }}
+      BACKUP_SOURCES: /library
+      BACKUP_ARCHIVE: /archive-library
+      BACKUP_RETENTION_DAYS: 7
+    volumes:
+      - ./library:/library:ro
+      - $BACKUP_DIR/library:/archive-library
 
   cloudflare-tunnel:
     container_name: immich_cloudflare_tunnel
@@ -82,6 +104,10 @@ services:
 volumes:
   model-cache:
   database:
+  backup:
+
 configs:
   immich_config:
     file: ./config/immich.json
+  timezone:
+    file: /etc/localtime
