--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -31,24 +31,33 @@ services:
       POSTGRES_PASSWORD: $DB_PASSWORD
     volumes:
       - database:/var/lib/postgresql/data
+      - backup:/tmp/backup
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
+    labels:
+      docker-volume-backup.archive-pre: pg_dumpall -l '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/speedtest-tracker.sql -c --if-exists
     restart: always
 
   backup:
     container_name: speedtest-tracker_backup
-    image: prodrigestivill/postgres-backup-local:16@sha256:f873bbfb406db633ab879628b11ef8092279639c467a2ea5f5bfa08b776252fb
+    image: offen/docker-volume-backup:v2.40.0@sha256:f9cf83d63a1a9129b7c421090b584f11732fc201283f415552b14113f2cbf674
     environment:
-      POSTGRES_HOST: $DB_HOSTNAME
-      POSTGRES_DB: $DB_DATABASE_NAME
-      POSTGRES_USER: $DB_USERNAME
-      POSTGRES_PASSWORD: $DB_PASSWORD
-      POSTGRES_CLUSTER: TRUE
-      POSTGRES_EXTRA_OPTS: --clean --if-exists
-      TZ: JST
-      SCHEDULE: 0 5 * * *
+      BACKUP_CRON_EXPRESSION: "0 5 * * *"
+      BACKUP_FILENAME: speedtest-tracker_database_%Y%m%d.{{ .Extension }}
+      BACKUP_SKIP_BACKENDS_FROM_PRUNE: s3
+      AWS_S3_BUCKET_NAME: $R2_BUCKET_NAME
+      AWS_S3_PATH: $R2_PATH
+      BACKUP_RETENTION_DAYS: 7
+    env_file:
+      - path: ../.env
+        required: true
     volumes:
-      - ./backups:/backups
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - backup:/backup:ro
+      - $BACKUP_DIR/database:/archive
+    configs:
+      - source: timezone
+        target: /etc/localtime
     depends_on:
       database:
         condition: service_healthy
@@ -64,3 +73,8 @@ services:
 
 volumes:
   database:
+  backup:
+
+configs:
+  timezone:
+    file: /etc/localtime
