--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           script: |
             source "$HOME/.orbstack/shell/init.zsh" &>/dev/null
             git -C "$HOME/homelab" fetch
-            git -C "$HOME/homelab" reset --hard
+            git -C "$HOME/homelab" reset --hard origin/main
             while read -r compose; do
               docker compose -f "$compose" up -d --quiet-pull
             done < <(find "$HOME/homelab" -type f -name 'compose.yml')
