--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -32,7 +32,7 @@ services:
     restart: always
 
   database:
-    container_name: immich_postgres
+    container_name: immich_database
     image: tensorchord/pgvecto-rs:pg16-v0.2.1@sha256:ff2288833f32aa863ba46f4c6f5b5c143f526a2d27f4cca913c232f917a66602
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
@@ -59,20 +59,22 @@ services:
     container_name: immich_backup-database
     image: offen/docker-volume-backup:v2.40.0@sha256:f9cf83d63a1a9129b7c421090b584f11732fc201283f415552b14113f2cbf674
     environment:
-      BACKUP_CRON_EXPRESSION: "0 5 * * *"
+      BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: immich_database_%Y%m%d.{{ .Extension }}
       BACKUP_SKIP_BACKENDS_FROM_PRUNE: s3
       AWS_S3_BUCKET_NAME: $R2_BUCKET_NAME
       AWS_S3_PATH: $R2_PATH
+      BACKUP_ARCHIVE: /archive/database
       BACKUP_RETENTION_DAYS: 7
     env_file:
       - path: ../.env
         required: true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
       - backup:/backup:ro
-      - $BACKUP_DIR/database:/archive
+      - $BACKUP_DIR/database:/archive/database
     configs:
+      - source: docker-socket
+        target: /var/run/docker.sock
       - source: timezone
         target: /etc/localtime
     depends_on:
@@ -84,17 +86,17 @@ services:
     <<: *backup
     container_name: immich_backup-library
     environment:
-      BACKUP_CRON_EXPRESSION: "0 5 * * *"
+      BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: immich_library_%Y%m%d.{{ .Extension }}
       BACKUP_SOURCES: /library
-      BACKUP_ARCHIVE: /archive-library
+      BACKUP_ARCHIVE: /archive/library
       BACKUP_RETENTION_DAYS: 7
     volumes:
       - ./library:/library:ro
-      - $BACKUP_DIR/library:/archive-library
+      - $BACKUP_DIR/library:/archive/library
 
   cloudflare-tunnel:
-    container_name: immich_cloudflare_tunnel
+    container_name: immich_cloudflare-tunnel
     image: cloudflare/cloudflared:2024.8.2@sha256:004f4b7b60bab652d478148c138843c24eae1feee4c58fddd435b9b79c953957
     command: tunnel --no-autoupdate run
     environment:
@@ -107,7 +109,9 @@ volumes:
   backup:
 
 configs:
-  immich_config:
-    file: ./config/immich.json
+  docker-socket:
+    file: /var/run/docker.sock
   timezone:
     file: /etc/localtime
+  immich_config:
+    file: ./config/immich.json
