--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -47,7 +47,7 @@ services:
     container_name: misskey_backup
     image: offen/docker-volume-backup:v2.40.0@sha256:f9cf83d63a1a9129b7c421090b584f11732fc201283f415552b14113f2cbf674
     environment:
-      BACKUP_CRON_EXPRESSION: "0 5 * * *"
+      BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: misskey_database_%Y%m%d.{{ .Extension }}
       BACKUP_SKIP_BACKENDS_FROM_PRUNE: s3
       AWS_S3_BUCKET_NAME: $R2_BUCKET_NAME
@@ -57,10 +57,11 @@ services:
       - path: ../.env
         required: true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
       - backup:/backup:ro
       - $BACKUP_DIR/database:/archive
     configs:
+      - source: docker-socket
+        target: /var/run/docker.sock
       - source: timezone
         target: /etc/localtime
     depends_on:
@@ -81,7 +82,9 @@ volumes:
   backup:
 
 configs:
-  misskey_config:
-    file: ./config/misskey.yml
+  docker-socket:
+    file: /var/run/docker.sock
   timezone:
     file: /etc/localtime
+  misskey_config:
+    file: ./config/misskey.yml
