--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -48,7 +48,7 @@ services:
     image: offen/docker-volume-backup:v2.42.0@sha256:095c1b9139ea1676cfd3da3d231804bb5131f6adda519ecc838987c025ea40df
     environment:
       BACKUP_CRON_EXPRESSION: 0 5 * * *
-      BACKUP_FILENAME: misskey_database_%Y%m%d.{{ .Extension }}
+      BACKUP_FILENAME: misskey_%Y%m%d.{{ .Extension }}
       BACKUP_SKIP_BACKENDS_FROM_PRUNE: s3
       AWS_S3_BUCKET_NAME: $R2_BUCKET_NAME
       AWS_S3_PATH: $R2_PATH
