--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,5 @@ jobs:
             while read -r compose; do
               docker compose -f "$compose" up -d --quiet-pull
             done < <(find "$HOME/homelab" -type f -name 'compose.yml')
+            docker image prune -af
+            docker volume prune -af
