--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -33,7 +33,7 @@ services:
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
     labels:
-      docker-volume-backup.archive-pre: pg_dumpall -l '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/misskey.sql -c --if-exists
+      docker-volume-backup.archive-pre: pg_dumpall -l '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/misskey.sql -c --if-exists --inserts
     restart: always
 
   redis:
