--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   Deploy:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-Latest
     steps:
       - name: 🛣️ Setup Tailscale
         uses: tailscale/github-action@4e4c49acaa9818630ce0bd7a564372c17e33fb4d # v2
@@ -31,6 +31,6 @@ jobs:
             git -C "$HOME/homelab" reset --hard origin/main
             while read -r compose; do
               docker compose -f "$compose" up -d --quiet-pull
-            done < <(find "$HOME/homelab" -type f -name 'compose.yml')
+            done < <(find "$HOME/homelab" -name 'compose.yml')
             docker image prune -af
             docker volume prune -af
