ci(test): Run test on PR
Deps update should trigger this workflow.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - "**/compose.yml"
       - .github/workflows/test.yml
+  pull_request:
+    paths:
+      - "**/compose.yml"
+      - .github/workflows/test.yml
 
 jobs:
   Test:
