--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,11 +4,11 @@
   "dependencyDashboard": false,
   "packageRules": [
     {
+      "groupName": "Immich",
       "matchPackageNames": [
         "ghcr.io/immich-app/immich-server",
         "ghcr.io/immich-app/immich-machine-learning"
-      ],
-      "groupName": "Immich"
+      ]
     }
   ]
 }
