feat(compose): Encrypt the database backup with GPG
It improves security while uploading to the object storage.

--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -67,6 +67,7 @@ services:
       AWS_S3_PATH: $R2_PATH
       BACKUP_ARCHIVE: /archive/database
       BACKUP_RETENTION_DAYS: 7
+      GPG_PASSPHRASE: $DB_PASSWORD
     env_file:
       - path: ../.env
         required: true
