ci(test): Specify the root working directory
Can run in the more than 2 directory.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: ♻️ Copy the .env
         run: |
-          for dir in .. .; do
+          for dir in "$PWD" "$GITHUB_WORKSPACE"; do
             sed -e 's/=$/=./g' "$dir/.env.tmpl" >"$dir/.env"
           done
 
